[gd_scene load_steps=13 format=4 uid="uid://dbqf8lyavxkt5"]

[ext_resource type="Script" path="res://scenes/levels/room.gd" id="1_550ti"]
[ext_resource type="Script" path="res://scenes/environment/doors/doors.gd" id="2_m6p73"]
[ext_resource type="Texture2D" uid="uid://dvihbseecifao" path="res://sprites/level/dungeonBackground2.png" id="2_ulk5a"]
[ext_resource type="Script" path="res://scenes/environment/doors/room_door.gd" id="3_4jxfg"]
[ext_resource type="Script" path="res://scenes/levels/enemies.gd" id="4_i1d5y"]
[ext_resource type="PackedScene" uid="uid://cjujgg3nn4ytq" path="res://scenes/enemies/teddy/teddy_bear.tscn" id="5_dxya0"]
[ext_resource type="Script" path="res://scenes/levels/save_points.gd" id="6_e6g5u"]
[ext_resource type="PackedScene" uid="uid://dmtmrhvnqsk4b" path="res://scenes/player/player.tscn" id="8_g0vv8"]
[ext_resource type="PackedScene" uid="uid://dw3teyaodus8k" path="res://scenes/ui/ui.tscn" id="9_llq3v"]
[ext_resource type="PackedScene" uid="uid://ie0ds48vlkdj" path="res://scenes/levels/tilemap/3d_tileset.tscn" id="9_v431t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5ts2"]
size = Vector2(30, 176)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo4ea"]
size = Vector2(20, 139.5)

[node name="Room7" type="Node2D" node_paths=PackedStringArray("player", "enemies", "save_points", "doors", "ui", "camera", "camera_limiter_bl", "camera_limiter_tr")]
process_mode = 1
script = ExtResource("1_550ti")
room_id = 7
player = NodePath("Player")
enemies = NodePath("LevelEnemies")
save_points = NodePath("LevelSavePoints")
doors = NodePath("LevelDoors")
ui = NodePath("UI")
camera = NodePath("Player/Camera2D")
camera_limiter_bl = NodePath("CameraLimiters/CameraLimiterBL")
camera_limiter_tr = NodePath("CameraLimiters/CameraLimiter TR")

[node name="DungeonBackground" type="Sprite2D" parent="."]
position = Vector2(297, 3)
texture = ExtResource("2_ulk5a")

[node name="LevelDoors" type="Node2D" parent="."]
script = ExtResource("2_m6p73")
metadata/_edit_lock_ = true

[node name="RoomDoor" type="Area2D" parent="LevelDoors"]
position = Vector2(-288, 224)
script = ExtResource("3_4jxfg")
from_id = 7
to_id = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDoors/RoomDoor"]
position = Vector2(-39, -71)
shape = SubResource("RectangleShape2D_m5ts2")

[node name="RoomDoor2" type="Area2D" parent="LevelDoors"]
position = Vector2(896, 93)
script = ExtResource("3_4jxfg")
from_id = 7
to_id = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelDoors/RoomDoor2"]
position = Vector2(29, -62)
shape = SubResource("RectangleShape2D_lo4ea")

[node name="LevelEnemies" type="Node2D" parent="."]
script = ExtResource("4_i1d5y")
metadata/_edit_lock_ = true

[node name="TeddyBear" parent="LevelEnemies" instance=ExtResource("5_dxya0")]
position = Vector2(514, 63)

[node name="LevelSavePoints" type="Node2D" parent="."]
script = ExtResource("6_e6g5u")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("8_g0vv8")]
position = Vector2(-135, 186)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -50)
zoom = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="UI" parent="." instance=ExtResource("9_llq3v")]

[node name="CameraLimiters" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="CameraLimiterBL" type="Node2D" parent="CameraLimiters"]
position = Vector2(-277, 303)

[node name="CameraLimiter TR" type="Node2D" parent="CameraLimiters"]
position = Vector2(872, -243)

[node name="LevelGates" type="Node2D" parent="."]

[node name="3DTileset" parent="." instance=ExtResource("9_v431t")]
tile_map_data = PackedByteArray("AAD5/wcAAQAAAAAAAAD5/wgAAQAAAAEAAAD5/wkAAQAAAAEAAAD5/woAAQAAAAEAAAD6/wcAAQAAAAAAAAD6/wgAAQAAAAEAAAD6/wkAAQAAAAEAAAD6/woAAQAAAAEAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAEAAAD7/wkAAQAAAAEAAAD7/woAAQAAAAEAAAD8/wcAAQAAAAAAAAD8/wgAAQAAAAEAAAD8/wkAAQAAAAEAAAD8/woAAQAAAAEAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAEAAAD9/wkAAQAAAAEAAAD9/woAAQAAAAEAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAEAAAD+/wkAAQAAAAEAAAD+/woAAQAAAAEAAAD//wcAAQAAAAAAAAD//wgAAQAAAAEAAAD//wkAAQAAAAEAAAD//woAAQAAAAEAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAEAAAAAAAkAAQAAAAEAAAAAAAoAAQAAAAEAAAABAAcAAQAAAAAAAAABAAgAAQAAAAEAAAABAAkAAQAAAAEAAAABAAoAAQAAAAEAAAACAAcAAQAAAAAAAAACAAgAAQAAAAEAAAACAAkAAQAAAAEAAAACAAoAAQAAAAEAAAADAAcAAQAAAAAAAAADAAgAAQAAAAEAAAADAAkAAQAAAAEAAAADAAoAAQAAAAEAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAEAAAAEAAkAAQAAAAEAAAAEAAoAAQAAAAEAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAEAAAAFAAkAAQAAAAEAAAAFAAoAAQAAAAEAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAEAAAAGAAkAAQAAAAEAAAAGAAoAAQAAAAEAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAEAAAAHAAkAAQAAAAEAAAAHAAoAAQAAAAEAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAEAAAAIAAkAAQAAAAEAAAAIAAoAAQAAAAEAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAEAAAAJAAkAAQAAAAEAAAAJAAoAAQAAAAEAAAAKAAcAAQAAAAEAAAAKAAgAAQAAAAEAAAAKAAkAAQAAAAEAAAAKAAoAAQAAAAEAAAALAAcAAQAAAAEAAAALAAgAAQAAAAEAAAALAAkAAQAAAAEAAAALAAoAAQAAAAEAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAEAAAAKAAUAAQAAAAEAAAAKAAYAAQAAAAEAAAALAAMAAQAAAAAAAAALAAQAAQAAAAEAAAALAAUAAQAAAAEAAAALAAYAAQAAAAEAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAEAAAAMAAUAAQAAAAEAAAAMAAYAAQAAAAEAAAAMAAcAAQAAAAEAAAAMAAgAAQAAAAEAAAAMAAkAAQAAAAEAAAAMAAoAAQAAAAEAAAANAAMAAQAAAAAAAAANAAQAAQAAAAEAAAANAAUAAQAAAAEAAAANAAYAAQAAAAEAAAANAAcAAQAAAAEAAAANAAgAAQAAAAEAAAANAAkAAQAAAAEAAAANAAoAAQAAAAEAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAEAAAAOAAUAAQAAAAEAAAAOAAYAAQAAAAEAAAAOAAcAAQAAAAEAAAAOAAgAAQAAAAEAAAAOAAkAAQAAAAEAAAAOAAoAAQAAAAEAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAEAAAAPAAUAAQAAAAEAAAAPAAYAAQAAAAEAAAAPAAcAAQAAAAEAAAAPAAgAAQAAAAEAAAAPAAkAAQAAAAEAAAAPAAoAAQAAAAEAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAEAAAARAAMAAQAAAAAAAAARAAQAAQAAAAEAAAASAAMAAQAAAAAAAAASAAQAAQAAAAEAAAATAAMAAQAAAAAAAAATAAQAAQAAAAEAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAEAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAEAAAAWAAMAAQAAAAAAAAAWAAQAAQAAAAEAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAEAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAEAAAAZAAMAAQAAAAAAAAAZAAQAAQAAAAEAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAEAAAAQAAUAAQAAAAEAAAAQAAYAAQAAAAEAAAAQAAcAAQAAAAEAAAAQAAgAAQAAAAEAAAAQAAkAAQAAAAEAAAAQAAoAAQAAAAEAAAARAAUAAQAAAAEAAAARAAYAAQAAAAEAAAARAAcAAQAAAAEAAAARAAgAAQAAAAEAAAARAAkAAQAAAAEAAAARAAoAAQAAAAEAAAASAAUAAQAAAAEAAAASAAYAAQAAAAEAAAASAAcAAQAAAAEAAAASAAgAAQAAAAEAAAASAAkAAQAAAAEAAAASAAoAAQAAAAEAAAATAAUAAQAAAAEAAAATAAYAAQAAAAEAAAATAAcAAQAAAAEAAAATAAgAAQAAAAEAAAATAAkAAQAAAAEAAAATAAoAAQAAAAEAAAAUAAUAAQAAAAEAAAAUAAYAAQAAAAEAAAAUAAcAAQAAAAEAAAAUAAgAAQAAAAEAAAAUAAkAAQAAAAEAAAAUAAoAAQAAAAEAAAAVAAUAAQAAAAEAAAAVAAYAAQAAAAEAAAAVAAcAAQAAAAEAAAAVAAgAAQAAAAEAAAAVAAkAAQAAAAEAAAAVAAoAAQAAAAEAAAAWAAUAAQAAAAEAAAAWAAYAAQAAAAEAAAAWAAcAAQAAAAEAAAAWAAgAAQAAAAEAAAAWAAkAAQAAAAEAAAAWAAoAAQAAAAEAAAAXAAUAAQAAAAEAAAAXAAYAAQAAAAEAAAAXAAcAAQAAAAEAAAAXAAgAAQAAAAEAAAAXAAkAAQAAAAEAAAAXAAoAAQAAAAEAAAAYAAUAAQAAAAEAAAAYAAYAAQAAAAEAAAAYAAcAAQAAAAEAAAAYAAgAAQAAAAEAAAAYAAkAAQAAAAEAAAAYAAoAAQAAAAEAAAAZAAUAAQAAAAEAAAAZAAYAAQAAAAEAAAAZAAcAAQAAAAEAAAAZAAgAAQAAAAEAAAAZAAkAAQAAAAEAAAAZAAoAAQAAAAEAAAAaAAUAAQAAAAEAAAAaAAYAAQAAAAEAAAAaAAcAAQAAAAEAAAAaAAgAAQAAAAEAAAAaAAkAAQAAAAEAAAAaAAoAAQAAAAEAAAD3//b/AQAAAAEAAAD3//f/AQAAAAEAAAD3//j/AQAAAAEAAAD3//n/AQAAAAEAAAD3//r/AQAAAAEAAAD3//v/AQAAAAEAAAD3//z/AQAAAAEAAAD4//b/AQAAAAEAAAD4//f/AQAAAAEAAAD4//j/AQAAAAEAAAD4//n/AQAAAAEAAAD4//r/AQAAAAEAAAD4//v/AQAAAAEAAAD4//z/AQAAAAEAAAD5//b/AQAAAAEAAAD5//f/AQAAAAEAAAD5//j/AQAAAAEAAAD5//n/AQAAAAEAAAD5//r/AQAAAAEAAAD5//v/AQAAAAEAAAD5//z/AQAAAAEAAAD6//b/AQAAAAEAAAD6//f/AQAAAAEAAAD6//j/AQAAAAEAAAD6//n/AQAAAAEAAAD6//r/AQAAAAEAAAD6//v/AQAAAAEAAAD6//z/AQAAAAEAAAD7//b/AQAAAAEAAAD7//f/AQAAAAEAAAD7//j/AQAAAAEAAAD7//n/AQAAAAEAAAD7//r/AQAAAAEAAAD7//v/AQAAAAEAAAD7//z/AQAAAAEAAAD8//b/AQAAAAEAAAD8//f/AQAAAAEAAAD8//j/AQAAAAEAAAD8//n/AQAAAAEAAAD8//r/AQAAAAEAAAD8//v/AQAAAAEAAAD8//z/AQAAAAEAAAD9//b/AQAAAAEAAAD9//f/AQAAAAEAAAD9//j/AQAAAAEAAAD9//n/AQAAAAEAAAD9//r/AQAAAAEAAAD9//v/AQAAAAEAAAD9//z/AQAAAAEAAAD+//b/AQAAAAEAAAD+//f/AQAAAAEAAAD+//j/AQAAAAEAAAD+//n/AQAAAAEAAAD+//r/AQAAAAEAAAD+//v/AQAAAAEAAAD+//z/AQAAAAEAAAD///b/AQAAAAEAAAD///f/AQAAAAEAAAD///j/AQAAAAEAAAD///n/AQAAAAEAAAD///r/AQAAAAEAAAD///v/AQAAAAEAAAD///z/AQAAAAEAAAAAAPb/AQAAAAEAAAAAAPf/AQAAAAEAAAAAAPj/AQAAAAEAAAAAAPn/AQAAAAEAAAAAAPr/AQAAAAEAAAAAAPv/AQAAAAEAAAAAAPz/AQAAAAEAAAABAPb/AQAAAAEAAAABAPf/AQAAAAEAAAABAPj/AQAAAAEAAAABAPn/AQAAAAEAAAABAPr/AQAAAAEAAAABAPv/AQAAAAEAAAABAPz/AQAAAAEAAAACAPb/AQAAAAEAAAACAPf/AQAAAAEAAAACAPj/AQAAAAEAAAACAPn/AQAAAAEAAAACAPr/AQAAAAEAAAACAPv/AQAAAAEAAAACAPz/AQAAAAEAAAADAPb/AQAAAAEAAAADAPf/AQAAAAEAAAADAPj/AQAAAAEAAAADAPn/AQAAAAEAAAADAPr/AQAAAAEAAAADAPv/AQAAAAEAAAADAPz/AQAAAAEAAAAEAPb/AQAAAAEAAAAEAPf/AQAAAAEAAAAEAPj/AQAAAAEAAAAEAPn/AQAAAAEAAAAEAPr/AQAAAAEAAAAEAPv/AQAAAAEAAAAEAPz/AQAAAAEAAAAFAPb/AQAAAAEAAAAFAPf/AQAAAAEAAAAFAPj/AQAAAAEAAAAFAPn/AQAAAAEAAAAFAPr/AQAAAAEAAAAFAPv/AQAAAAEAAAAFAPz/AQAAAAEAAAAGAPb/AQAAAAEAAAAGAPf/AQAAAAEAAAAGAPj/AQAAAAEAAAAGAPn/AQAAAAEAAAAGAPr/AQAAAAEAAAAGAPv/AQAAAAEAAAAGAPz/AQAAAAEAAAAHAPb/AQAAAAEAAAAHAPf/AQAAAAEAAAAHAPj/AQAAAAEAAAAHAPn/AQAAAAEAAAAHAPr/AQAAAAEAAAAHAPv/AQAAAAEAAAAHAPz/AQAAAAEAAAAIAPb/AQAAAAEAAAAIAPf/AQAAAAEAAAAIAPj/AQAAAAEAAAAIAPn/AQAAAAEAAAAIAPr/AQAAAAEAAAAIAPv/AQAAAAEAAAAIAPz/AQAAAAEAAAAJAPb/AQAAAAEAAAAJAPf/AQAAAAEAAAAJAPj/AQAAAAEAAAAJAPn/AQAAAAEAAAAJAPr/AQAAAAEAAAAJAPv/AQAAAAEAAAAJAPz/AQAAAAEAAAAKAPb/AQAAAAEAAAAKAPf/AQAAAAEAAAAKAPj/AQAAAAEAAAAKAPn/AQAAAAEAAAAKAPr/AQAAAAEAAAAKAPv/AQAAAAEAAAAKAPz/AQAAAAEAAAALAPb/AQAAAAEAAAALAPf/AQAAAAEAAAALAPj/AQAAAAEAAAALAPn/AQAAAAEAAAALAPr/AQAAAAEAAAALAPv/AQAAAAEAAAALAPz/AQAAAAEAAAAMAPb/AQAAAAEAAAAMAPf/AQAAAAEAAAAMAPj/AQAAAAEAAAAMAPn/AQAAAAEAAAAMAPr/AQAAAAEAAAAMAPv/AQAAAAEAAAAMAPz/AQAAAAEAAAANAPb/AQAAAAEAAAANAPf/AQAAAAEAAAANAPj/AQAAAAEAAAANAPn/AQAAAAEAAAANAPr/AQAAAAEAAAANAPv/AQAAAAEAAAANAPz/AQAAAAEAAAAOAPb/AQAAAAEAAAAOAPf/AQAAAAEAAAAOAPj/AQAAAAEAAAAOAPn/AQAAAAEAAAAOAPr/AQAAAAEAAAAOAPv/AQAAAAEAAAAOAPz/AQAAAAEAAAAPAPb/AQAAAAEAAAAPAPf/AQAAAAEAAAAPAPj/AQAAAAEAAAAPAPn/AQAAAAEAAAAPAPr/AQAAAAEAAAAPAPv/AQAAAAEAAAAPAPz/AQAAAAEAAAAQAPb/AQAAAAEAAAAQAPf/AQAAAAEAAAAQAPj/AQAAAAEAAAAQAPn/AQAAAAEAAAAQAPr/AQAAAAEAAAAQAPv/AQAAAAEAAAAQAPz/AQAAAAEAAAARAPb/AQAAAAEAAAARAPf/AQAAAAEAAAARAPj/AQAAAAEAAAARAPn/AQAAAAEAAAARAPr/AQAAAAEAAAARAPv/AQAAAAEAAAARAPz/AQAAAAEAAAASAPb/AQAAAAEAAAASAPf/AQAAAAEAAAASAPj/AQAAAAEAAAASAPn/AQAAAAEAAAASAPr/AQAAAAEAAAASAPv/AQAAAAEAAAASAPz/AQAAAAEAAAATAPb/AQAAAAEAAAATAPf/AQAAAAEAAAATAPj/AQAAAAEAAAATAPn/AQAAAAEAAAATAPr/AQAAAAEAAAATAPv/AQAAAAEAAAATAPz/AQAAAAEAAAAUAPb/AQAAAAEAAAAUAPf/AQAAAAEAAAAUAPj/AQAAAAEAAAAUAPn/AQAAAAEAAAAUAPr/AQAAAAEAAAAUAPv/AQAAAAEAAAAUAPz/AQAAAAEAAAAVAPb/AQAAAAEAAAAVAPf/AQAAAAEAAAAVAPj/AQAAAAEAAAAVAPn/AQAAAAEAAAAVAPr/AQAAAAEAAAAVAPv/AQAAAAEAAAAVAPz/AQAAAAEAAAAWAPb/AQAAAAEAAAAWAPf/AQAAAAEAAAAWAPj/AQAAAAEAAAAWAPn/AQAAAAEAAAAWAPr/AQAAAAEAAAAWAPv/AQAAAAEAAAAWAPz/AQAAAAEAAAAXAPb/AQAAAAEAAAAXAPf/AQAAAAEAAAAXAPj/AQAAAAEAAAAXAPn/AQAAAAEAAAAXAPr/AQAAAAEAAAAXAPv/AQAAAAEAAAAXAPz/AQAAAAEAAAAYAPb/AQAAAAEAAAAYAPf/AQAAAAEAAAAYAPj/AQAAAAEAAAAYAPn/AQAAAAEAAAAYAPr/AQAAAAEAAAAYAPv/AQAAAAEAAAAYAPz/AQAAAAEAAAAZAPb/AQAAAAEAAAAZAPf/AQAAAAEAAAAZAPj/AQAAAAEAAAAZAPn/AQAAAAEAAAAZAPr/AQAAAAEAAAAZAPv/AQAAAAEAAAAZAPz/AQAAAAEAAAAaAPb/AQAAAAEAAAAaAPf/AQAAAAEAAAAaAPj/AQAAAAEAAAAaAPn/AQAAAAEAAAAaAPr/AQAAAAEAAAAaAPv/AQAAAAEAAAAaAPz/AQAAAAEAAAD2/wcAAQAAAAAAAAD2/wgAAQAAAAEAAAD2/wkAAQAAAAEAAAD2/woAAQAAAAEAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAEAAAD3/wkAAQAAAAEAAAD3/woAAQAAAAEAAAD4/wcAAQAAAAAAAAD4/wgAAQAAAAEAAAD4/wkAAQAAAAEAAAD4/woAAQAAAAEAAAAbAAMAAQAAAAAAAAAcAAMAAQAAAAAAAAAdAP//AQAAAAEAAAAdAAAAAQAAAAEAAAAdAAEAAQAAAAEAAAAdAAIAAQAAAAEAAAAdAAMAAQAAAAAAAAAbAPn/AQAAAAEAAAAbAPr/AQAAAAEAAAAbAPv/AQAAAAEAAAAbAPz/AQAAAAEAAAAbAP3/AQAAAAEAAAAbAP7/AQAAAAEAAAAcAPn/AQAAAAEAAAAcAPr/AQAAAAEAAAAcAPv/AQAAAAEAAAAcAPz/AQAAAAEAAAAcAP3/AQAAAAEAAAAcAP7/AQAAAAEAAAAdAPn/AQAAAAEAAAAdAPr/AQAAAAEAAAAdAPv/AQAAAAEAAAAdAPz/AQAAAAEAAAAdAP3/AQAAAAEAAAAdAP7/AQAAAAEAAAAbAAQAAQAAAAEAAAAbAAUAAQAAAAEAAAAbAAYAAQAAAAEAAAAbAAcAAQAAAAEAAAAbAAgAAQAAAAEAAAAbAAkAAQAAAAEAAAAbAAoAAQAAAAEAAAAcAAQAAQAAAAEAAAAcAAUAAQAAAAEAAAAcAAYAAQAAAAEAAAAcAAcAAQAAAAEAAAAcAAgAAQAAAAEAAAAcAAkAAQAAAAEAAAAcAAoAAQAAAAEAAAAdAAQAAQAAAAEAAAAdAAUAAQAAAAEAAAAdAAYAAQAAAAEAAAAdAAcAAQAAAAEAAAAdAAgAAQAAAAEAAAAdAAkAAQAAAAEAAAAdAAoAAQAAAAEAAAAbAPb/AQAAAAEAAAAbAPf/AQAAAAEAAAAbAPj/AQAAAAEAAAAcAPb/AQAAAAEAAAAcAPf/AQAAAAEAAAAcAPj/AQAAAAEAAAAdAPb/AQAAAAEAAAAdAPf/AQAAAAEAAAAdAPj/AQAAAAEAAAD1/wMAAQAAAAEAAAD1/wQAAQAAAAEAAAD1/wUAAQAAAAEAAAD1/wYAAQAAAAEAAADy//v/AQAAAAEAAADy//z/AQAAAAEAAADy//3/AQAAAAEAAADy//7/AQAAAAEAAADy////AQAAAAEAAADy/wAAAQAAAAEAAADy/wEAAQAAAAEAAADy/wIAAQAAAAEAAADy/wMAAQAAAAEAAADy/wQAAQAAAAEAAADy/wUAAQAAAAEAAADy/wYAAQAAAAEAAADy/wcAAQAAAAEAAADy/wgAAQAAAAEAAADy/wkAAQAAAAEAAADy/woAAQAAAAEAAADz//v/AQAAAAEAAADz//z/AQAAAAEAAADz//3/AQAAAAEAAADz//7/AQAAAAEAAADz////AQAAAAEAAADz/wAAAQAAAAEAAADz/wEAAQAAAAEAAADz/wIAAQAAAAEAAADz/wMAAQAAAAEAAADz/wQAAQAAAAEAAADz/wUAAQAAAAEAAADz/wYAAQAAAAEAAADz/wcAAQAAAAEAAADz/wgAAQAAAAEAAADz/wkAAQAAAAEAAADz/woAAQAAAAEAAAD0//v/AQAAAAEAAAD0//z/AQAAAAEAAAD0//3/AQAAAAEAAAD0//7/AQAAAAEAAAD0////AQAAAAEAAAD0/wAAAQAAAAEAAAD0/wEAAQAAAAEAAAD0/wIAAQAAAAEAAAD0/wMAAQAAAAEAAAD0/wQAAQAAAAEAAAD0/wUAAQAAAAEAAAD0/wYAAQAAAAEAAAD0/wcAAQAAAAEAAAD0/wgAAQAAAAEAAAD0/wkAAQAAAAEAAAD0/woAAQAAAAEAAAD1//v/AQAAAAEAAAD1//z/AQAAAAEAAAD1//3/AQAAAAEAAAD1//7/AQAAAAEAAAD1////AQAAAAEAAAD1/wAAAQAAAAEAAAD1/wEAAQAAAAEAAAD1/wIAAQAAAAEAAAD1/wcAAQAAAAEAAAD1/wgAAQAAAAEAAAD1/wkAAQAAAAEAAAD1/woAAQAAAAEAAADy//f/AQAAAAEAAADy//j/AQAAAAEAAADy//n/AQAAAAEAAADy//r/AQAAAAEAAADz//f/AQAAAAEAAADz//j/AQAAAAEAAADz//n/AQAAAAEAAADz//r/AQAAAAEAAAD0//f/AQAAAAEAAAD0//j/AQAAAAEAAAD0//n/AQAAAAEAAAD0//r/AQAAAAEAAAD1//f/AQAAAAEAAAD1//j/AQAAAAEAAAD1//n/AQAAAAEAAAD1//r/AQAAAAEAAAD2//f/AQAAAAEAAAD2//j/AQAAAAEAAAD2//n/AQAAAAEAAAD2//r/AQAAAAEAAAD2//v/AQAAAAEAAAD2//z/AQAAAAEAAAD2//3/AQAAAAEAAAD2//7/AQAAAAEAAAD2////AQAAAAEAAAD2/wAAAQAAAAEAAAD2/wEAAQAAAAEAAAD2/wIAAQAAAAEAAAD3//3/AQAAAAEAAAD3//7/AQAAAAEAAAD3////AQAAAAEAAAD3/wAAAQAAAAEAAAD3/wEAAQAAAAEAAAD3/wIAAQAAAAEAAAA=")
metadata/_edit_lock_ = true
